--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  
  <meta name="keywords" content="" />
  <meta name="description" content="Príčinou smrti bola rakovina." />
- <meta property="og:title" content="Zomrel uznávaný americký režisér Joel Schumacher" />
+ <meta property="og:title" content="Zomrel uznávaný americký režisér Jan Meles" />
  <meta property="og:site_name" content="tvnoviny.sk" />
  <meta property="og:type" content="article" />
  <meta property="og:description" content="Príčinou smrti bola rakovina." />
@@ -648,7 +648,7 @@ var upScoreAuthor = "mmarcisiak";
 		 
 
 			<div class="date">22. 06. 2020 20:39 , článok bol aktualizovaný 22. 06. 2020 21:09  | NEW YORK/TASR</div>
-			<h1 style="color:#D10000;">Zomrel uznávaný americký režisér Joel Schumacher</h1>
+			<h1 style="color:#D10000;">Zomrel uznávaný americký režisér Jan Meles</h1>
 			<h2>Príčinou smrti bola rakovina.</h2>
 		</div>
 		<img alt="Americký filmový režisér Joel Schumacher " src="https://static.markiza.sk/a501/image/file/21/1768/hDGw.americky_filmovy_reziser_joel_schumacher_.jpg" class="img-responsive"/>
@@ -713,7 +713,7 @@ var upScoreAuthor = "mmarcisiak";
 				    </script>					
 				</td>
 				<td>
-					<a href="mailto:?subject=Pozri si tento článok na tvnoviny.sk&body=Zomrel uznávaný americký režisér Joel Schumacher%0D%0Ahttps://www.tvnoviny.sk/soubiz/2000645_zomrel-uznavany-americky-reziser-joel-schumacher" onclick="javascript:window.open(this.href, '', 'menubar=yes,toolbar=no,resizable=no,scrollbars=yes,height=368,width=585');return false;" title="Poslať na e-mail" data-gtm-category="ShareButtons" data-gtm-action="ArticleDetail" data-gtm-label="E-mail" data-gtm-value="E-mail" data-gtm-event="GENERIC">
+					<a href="mailto:?subject=Pozri si tento článok na tvnoviny.sk&body=Zomrel uznávaný americký režisér Jan Meles%0D%0Ahttps://www.tvnoviny.sk/soubiz/2000645_zomrel-uznavany-americky-reziser-joel-schumacher" onclick="javascript:window.open(this.href, '', 'menubar=yes,toolbar=no,resizable=no,scrollbars=yes,height=368,width=585');return false;" title="Poslať na e-mail" data-gtm-category="ShareButtons" data-gtm-action="ArticleDetail" data-gtm-label="E-mail" data-gtm-value="E-mail" data-gtm-event="GENERIC">
 						<button class="button envelope">
 							<i class="fa fa-envelope"></i>
 						</button>
@@ -760,7 +760,7 @@ var upScoreAuthor = "mmarcisiak";
     "@id": "https://google.com/article"
   },
 
-  "headline": "Zomrel uznávaný americký režisér Joel Schumacher",
+  "headline": "Zomrel uznávaný americký režisér Jan Meles",
   "image": {
     "@type": "ImageObject",
 	
